# boros

./: .gitignore  Cargo.toml  Dockerfile  README.md  boros.toml  sample.jsonl
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  clippy.yml  docs.yml  test.yml
.sqlx/: query-14b8d5134a71bb1356f39c05e79e7dfb2bfab983cb5eef976d9ea602f0626f0a.json  query-2b7b0806f87d806393d7d3c24ffdef07ce8ecb05cbfb32d88536aaad72dac3ec.json  query-6db3d5fc9d40698132484b0959b1649e48aa73d9c2b002075f9b2c5f90ea5cd8.json  query-82a79d3e89fe0a1d38f1eeb7e87170273ffc83ec50b40099663762118cb0edf8.json  query-c9c7d7b7a68ae840a5d5127c5cb3be43b7aad302f1a42cd462915fd7b0a26105.json  query-dac0b9f3cec7e49d54f474e39dbedc421915839748fa84bea7ad96b2722bc935.json  query-fdfaa9bcb1419cb2a0d1f28e59d0b755d97af51e25cffa73f55a292e8a7c85c6.json
docs/: .gitignore  Dockerfile  design.md  eslint.config.js  next.config.mjs  package.json  pnpm-lock.yaml
docs/adrs/: 001-pipeline.md  002-entry-point.md  003-db.md  003-storage.md
docs/app/: _meta.tsx  configuration.mdx  index.mdx  layout.tsx  page.mdx  priority.mdx
docs/app/Design/: index.mdx
docs/app/Design/Adrs/: 001-pipeline.md
docs/app/Design/adrs/: 002-entry-point.md  003-storage.md
docs/app/Installation/: docker.mdx  from_source.mdx
docs/app/configuration/: page.mdx
docs/app/design/: _meta.yml  index.mdx  page.mdx
docs/app/design/adrs/: 004-fanout.md  005-priority.md  _meta.yml  page.mdx
docs/app/design/adrs/001-pipeline/: page.md
docs/app/design/adrs/001-pipeline/001-fanout/: fanout.md
docs/app/design/adrs/001-pipeline/fanout/: page.md
docs/app/design/adrs/002-entry-point/: page.md
docs/app/design/adrs/003-db/: page.md
docs/app/design/adrs/003-storage/: page.md
docs/app/design/adrs/004-fanout/: page.md
docs/app/design/adrs/004-priority/: page.md
docs/app/design/adrs/005-priority/: page.md
docs/app/installation/: _meta.tsx  docker.mdx  from_source.mdx
docs/app/installation/docker/: page.mdx
docs/app/installation/from_source/: page.mdx
docs/app/priority/: page.mdx
docs/reports/: milestone_2.md
examples/: .gitignore  README.md  config.toml  tx-gen  tx-lock
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/js/: README.md  main.ts  package.json
spec/: buf.gen.yaml
spec/proto/boros/v1/: state.proto  submit.proto
src/: lib.rs  main.rs  model.rs
src/chain/: confirmation.rs  mod.rs  parse.rs
src/chain/sources/: mod.rs  n2n.rs
src/ledger/: mod.rs
src/ledger/relay/: mod.rs
src/ledger/u5c/: mod.rs
src/ledger/utxo/: mod.rs
src/monitor/: mod.rs  webhook.rs
src/network/: mempool.rs  mock_ouroboros_tx_submit_server.rs  mod.rs  peer.rs  peer_manager.rs
src/peer/: mempool.rs  mod.rs  peer.rs  peer_manager.rs
src/pipeline/: fanout.rs  ingest.rs  mod.rs  monitor.rs
src/pipeline/broadcast/: mempool.rs  mod.rs  peer.rs  peer_manager.rs
src/pipeline/fanout/: mempool.rs  mock_ouroboros_tx_submit_server.rs  mod.rs  peer.rs  peer_manager.rs  stage.rs  tx_submit_peer.rs  tx_submit_peer_manager.rs
src/pipeline/monitor/: file.rs  mod.rs  u5c.rs  utxo.rs
src/pipeline/peer_discovery/: mod.rs
src/pipeline/peersharing/: mod.rs
src/priority/: mod.rs
src/providers/utxo/: mod.rs
src/queue/: chaining.rs  mod.rs  priority.rs
src/server/: mod.rs  rocket.rs  state.rs  submit.rs  utxorpc.rs
src/server/grpc/: mod.rs
src/server/trp/: methods.rs  mod.rs
src/signing/: hashicorp.rs  mod.rs
src/signing/key/: derive.rs  mod.rs  sign.rs
src/sources/: mod.rs
src/sources/jsonl/: mod.rs
src/sources/kafka/: mod.rs
src/storage/: in_memory_db.rs  mod.rs  sqlite.rs
src/storage/migrations/: 20250120_init.sql
src/submission/: fanout.rs  ingest.rs  mod.rs  submit.rs  validation.rs
src/tx/: validator.rs
src/validation/: mod.rs
src/vault/: hashicorp.rs  mod.rs
src/vault/key/: mod.rs
test/: blocks  conway.tx  conway1.tx  conway10.tx  conway2.tx  conway3.tx  conway4.tx  conway5.tx  conway6.tx  conway8.tx  conway9.tx
