[package]
name = "boros"
description = "Tx omnivore"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/boros"
homepage = "https://github.com/txpipe/boros"
documentation = "https://docs.rs/boros"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]


[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
config = { version = "0.15.4", features = ["toml"] }
futures-util = "0.3.31"
gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
hex = "0.4.3"
itertools = "0.14.0"
pallas = "0.32.0"
rocket = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls"] }
tonic-reflection = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
