[package]
name = "boros"
description = "Tx omnivore"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/boros"
homepage = "https://github.com/txpipe/boros"
documentation = "https://docs.rs/boros"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
spec = { version = "0.1.0", path = "./spec/gen/rust" }

anyhow = "1.0.95"
async-trait = "0.1.85"
chrono = "0.4.39"
config = { version = "0.15.4", features = ["toml"] }
dotenv = "0.15.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
hex = "0.4.3"
itertools = "0.14.0"
pallas = { version = "=1.0.0-alpha.1", features = ["phase2", "wallet"] }
protoc-wkt = "1.0.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
serde_json = "1.0.138"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
rand = "0.9.0"
prost = "0.13.5"
vaultrs = "0.7.4"
bip39 = "2.1.0"
tonic = { version = "0.12.3", features = ["transport", "tls", "tls-webpki-roots", "tls-roots"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"]}
tonic-reflection = { version = "0.12.3" }
jsonrpsee = { version = "0.25.1", features = ["server", "client"] }
tower = "0.5.2"
tokio-util = { version = "0.7.15", features = ["rt"] }
base64 = "0.22.1"
